# basketball_2018

./: LICENSE
basketball_base_serial/: .ycm_extra_conf.py  CMakeLists.txt  README.md  package.xml
basketball_base_serial/include/basketball_base_serial/: SerialNode.h  SerialPort.h
basketball_base_serial/scripts/: VitualSerial.py
basketball_base_serial/src/: SerialNode.cpp  SerialPort.cpp  mainNode.cpp
basketball_bringup/: CMakeLists.txt  README.md  package.xml
basketball_bringup/launch/: start.launch  start_robot.launch
basketball_move/: CMakeLists.txt  README.md  package.xml
basketball_move/include/robot_move_pkg/: move_srv.h
basketball_move/scripts/: config.py  move_to_point.py
basketball_move/src/: Controler.cpp  move_srv.cpp
basketball_msgs/: CMakeLists.txt  README.md  package.xml
basketball_msgs/msg/: ballElem.msg  basketball_position.msg  cylinderElem.msg  mark_post_position.msg  robot_message.msg  robot_order.msg  robot_state.msg
basketball_msgs/srv/: ControlState.srv  ballDetect.srv  basketball_nav_srv.srv  basketball_shoot_srv.srv  focus_target.srv  mark_post_position_srv.srv  move_to_point.srv  robot_rotate.srv
basketball_shoot_srv/: CMakeLists.txt  README.md  package.xml
basketball_shoot_srv/src/: basketball_shoot_service.cpp
basketball_strage/: CMakeLists.txt  README.md  frames.gv  package.xml
basketball_strage/scripts/: .dx.py.swp  .pass_ball_first.py.swn  .pass_ball_first.py.swo  __init__.py  pass_ball_first.py  pass_ball_second.py  pass_ball_third.py  search_ball.py  shoot_ball_first.py  shoot_ball_oldsec.py  shoot_ball_second.py  shoot_ball_third.py  test.py  test_pass.py  test_shoot.py
basketball_strage/scripts/robot_find_pkg/: .find_volleyball.py.swp  __init__.py  find_ball.py  find_cylinder.py
basketball_strage/scripts/robot_move_pkg/: __init__.py  config.py  move_in_robot.py  robot_rotate.py  rotate.py  turn_an_angular.py  world_move.py
basketball_strage/scripts/robot_shovel_srv/: __init__.py  control_srv.py
basketball_strage/scripts/robot_state_class/: __init__.py  collvoid.py  position_parameters.py  robot_state_class.py  start_position.py
basketball_strage/scripts/robot_state_pkg/: __init__.py
basketball_strage/src/: mark_test.cpp
basketball_strage/srv/: basketball_position_srv.srv  basketball_shengine_srv.srv  basketball_shovel_srv.srv  camVisionDate.srv  move_to_point.srv  visionDate.srv
